introduced query.py, and fix paradigms. and more work
